--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,7 @@
 :root {
   --bgColor: #282828;
   --textColor: #f1efef;
-  --main: #5f54ee;
+  --main: #7f77ee;
   --inputColor: #302f2f;
   --bgSecundary: #242424;
 }
@@ -40,6 +40,18 @@ a {
 
 ::-webkit-scrollbar-thumb:hover {
   background: #e8e8e8;
+}
+
+input[type=color]::-webkit-color-swatch {
+  border: none;
+  border-radius: 50%;
+  padding: 0;
+}
+
+input[type=color]::-webkit-color-swatch-wrapper {
+  border: none;
+  border-radius: 50%;
+  padding: 0;
 }
 
 @tailwind base;
